--- a/newspaperdemo/templates/index.html
+++ b/newspaperdemo/templates/index.html
@@ -3,7 +3,7 @@
   <div class="container landing-page">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Newspaper Demo</h2>
+        <h2>Scrape Article Demo by <a href="mailto:karthik21@live.in">Karthik</a></h2>
       </div>
     </div>
 
